Functionality Complete New, Open, Save, Exit, Copy, Paste, Cut (Icons Included).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,16 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets PrintSupport )
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets PrintSupport)
+
 
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        Resources.qrc
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -42,7 +44,8 @@ else()
     endif()
 endif()
 
-target_link_libraries(Notepad-Cpp-Qt PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Notepad-Cpp-Qt
+    PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt5::PrintSupport)
 
 set_target_properties(Notepad-Cpp-Qt PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
